INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO

http_includedir = $(includedir)/akula/http

http_include_HEADERS = \
http.h \
http_exceptions.h \
http_message.h \
http_reply.h \
http_request.h \
http_requestline.h \
http_statusline.h \
http_resource.h

noinst_LTLIBRARIES = libhttp.la

libhttp_la_SOURCES = \
http_exceptions.cpp \
http_mesage.cpp \
http_reply.cpp \
http_request.cpp \
http_requestline.cpp \
http_statusline.cpp \
http_resource.cpp \
http_exceptions.h \
http_message.h \
http_reply.h \
http_request.h \
http_requestline.h \
http_statusline.h \
http_resource.h
