INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO

net_includedir = $(includedir)/akula/net

net_include_HEADERS = \
net.h \
address.h \
conn_socket.h \
socket.h \
exceptions.h \
serv_socket.h

noinst_LTLIBRARIES = libnet.la

libnet_la_SOURCES = \
address.cpp \
conn_socket.cpp \
socket.cpp \
serv_socket.cpp \
address.h \
conn_socket.h \
csocket.h \
exceptions.h \
aim_serv_socket.h
